# full_stack_wasm_lib_example

./: Cargo.toml  README.md
src/: main.rs
