[package]
name = "full_stack_wasm_lib_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'wasm32-unknown-unknown'.dev-dependencies]
wasm-bindgen-test = "0.3.0"


[features]
frontend = []
backend = []
